@@ -35,8 +35,11 @@ apport (0.111) UNRELEASED; urgency=low
     out keys. Add test cases.
   * apport/crashdb_impl/launchpad.py: Do not write the "Date:" field on
     upload(), and fetch it from the bug metadata in download().
+  * apport/crashdb_impl/launchpad.py, download(): Support reading bugs with
+    the "--- " separator instead of "ProblemType: ". Launchpad doesn't create
+    bugs that way ATM, but at least we have the reading part implemented now.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2008 15:24:59 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2008 15:49:31 +0200
 
 apport (0.110) intrepid; urgency=low
 
